--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,13 @@ footer {
   background :#da7f8f;
   color: #faf3f3
 }
-body img{
+header img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 300px;
+}
+main img{
   
   border: 1px solid #ddd;
   border-radius: 4px;
